# Anafis-Tauri

./: .gitignore  AGENTS.md  LICENSE  README.md  SPREADSHEET_CODE_REVIEW.md  SPREADSHEET_REFACTORING_CHECKLIST.md  build_flatpak.sh  package-lock.json
AnaFis/src-tauri/: Cargo.toml  PYTHON_PACKAGING.md  build.rs  pack_python.ps1  tauri.conf.json
AnaFis/src-tauri/benches/: statistics.rs
AnaFis/src-tauri/capabilities/: default.json  tabs.json
AnaFis/src-tauri/examples/: conformal_prediction_example.rs
AnaFis/src-tauri/python/: sympy_calls.py
AnaFis/src-tauri/src/: error.rs  lib.rs  main.rs  secondary_windows.rs  startup.rs  tabs.rs  uncertainty.rs
AnaFis/src-tauri/src/data_library/: commands.rs  database.rs  mod.rs  models.rs  statistics.rs
AnaFis/src-tauri/src/export/: anafispread.rs  excel.rs  html.rs  json.rs  markdown.rs  mod.rs  parquet.rs  tex.rs  text.rs
AnaFis/src-tauri/src/import/: anafispread.rs  csv.rs  mod.rs  parquet.rs
AnaFis/src-tauri/src/scientific/: commands.rs  math_functions.rs  mod.rs  uncertainty_propagation.rs
AnaFis/src-tauri/src/scientific/curve_fitting/: README.md  commands.rs  engine.rs  mod.rs  tests.rs  types.rs
AnaFis/src-tauri/src/scientific/curve_fitting/logic/: cache.rs  constants.rs  dof_logic.rs  fit_metrics.rs  fit_notes.rs  mod.rs  orchestrator.rs  response_builder.rs  sanitization.rs
AnaFis/src-tauri/src/scientific/curve_fitting/logic/engine/: batch_eval.rs  curvature.rs  data_prep.rs  diagnostics.rs  evaluation.rs  inference.rs  inner_solve.rs  linear_algebra.rs  mod.rs  solver.rs  state.rs
AnaFis/src-tauri/src/scientific/statistics/: mod.rs  pipeline.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/comprehensive_analysis/: mod.rs  traits.rs  utils.rs
AnaFis/src-tauri/src/scientific/statistics/comprehensive_analysis/descriptive_stats/: bootstrap_confidence.rs  central_tendency.rs  coordinator.rs  dispersion.rs  kde.rs  mod.rs  quantiles.rs  shape_statistics.rs
AnaFis/src-tauri/src/scientific/statistics/comprehensive_analysis/layer1_command/: command.rs  detection.rs  formatting.rs  mod.rs  orchestration.rs  quality.rs  validation.rs
AnaFis/src-tauri/src/scientific/statistics/comprehensive_analysis/layer2_coordinators/: correlation_analysis.rs  distribution_analysis.rs  mod.rs  (+7 more)
AnaFis/src-tauri/src/scientific/statistics/correlation/: correction_methods.rs  hypothesis_testing.rs  matrix.rs  methods.rs  mod.rs  types.rs  utils.rs
AnaFis/src-tauri/src/scientific/statistics/descriptive/: api.rs  central_tendency.rs  dispersion.rs  kde.rs  mod.rs  moments.rs  quantiles.rs  types.rs  uncertainty.rs
AnaFis/src-tauri/src/scientific/statistics/distributions/: distribution_functions.rs  fitting.rs  goodness_of_fit.rs  mod.rs  normality_tests.rs  transformations.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/formatting/: mod.rs
AnaFis/src-tauri/src/scientific/statistics/hypothesis_testing/: anova.rs  chi_square.rs  helpers.rs  mod.rs  post_hoc.rs  t_tests.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/matrix_ops/: covariance.rs  decomposition.rs  mod.rs  pca.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/outliers/: mod.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/power/: mod.rs
AnaFis/src-tauri/src/scientific/statistics/preprocessing/: imputation.rs  mod.rs
AnaFis/src-tauri/src/scientific/statistics/primitives/: design_matrix.rs  distance.rs  linear_algebra.rs  mod.rs  non_central_distributions.rs  numerical_integration.rs  regression.rs  robust_regression_utils.rs  root_finding.rs  sampling.rs  special_functions.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/prophet/: mod.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/quality_control/: mod.rs
AnaFis/src-tauri/src/scientific/statistics/reliability/: mod.rs
AnaFis/src-tauri/src/scientific/statistics/robust_regression/: mod.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/stationarity/: mod.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/tests/: core_statistics.rs  distributions.rs  mod.rs  nist_validation.rs  pipeline.rs  preprocessing.rs  regression.rs  time_series.rs  uncertainty.rs
AnaFis/src-tauri/src/scientific/statistics/time_series/: arima.rs  decomposition.rs  forecasting.rs  mod.rs  seasonality.rs  spectral.rs  trend.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/types/: analysis.rs  correlation.rs  descriptive.rs  distribution.rs  errors.rs  internal.rs  mod.rs  results.rs  time_series.rs
AnaFis/src-tauri/src/scientific/statistics/uncertainty/: bootstrap.rs  mod.rs  propagation.rs  types.rs
AnaFis/src-tauri/src/scientific/statistics/visualization/: mod.rs
AnaFis/src-tauri/src/scientific/uncertainty_propagation/: calculator.rs  confidence.rs  derivatives.rs  excel_conversion.rs  mod.rs  types.rs
AnaFis/src-tauri/src/spreadsheet/: cell.rs  commands.rs  core.rs  mod.rs  state.rs  tests.rs  types.rs
AnaFis/src-tauri/src/uncertainty_calculator/: mod.rs  uncertainty.rs
AnaFis/src-tauri/src/unit_conversion/: commands.rs  core.rs  mod.rs  units.rs
AnaFis/src-tauri/src/utils/: error.rs  file_operations.rs  logging.rs  mod.rs  validation.rs
AnaFis/src-tauri/src/windows/: mod.rs  secondary_windows.rs  tabs.rs  window_manager.rs
AnaFis/src-tauri/tests/: anova_tests.rs  benchmark_tests.rs  correlation_accuracy.rs  correlation_hypothesis_check.rs  descriptive_accuracy.rs  descriptive_refactor_check.rs  distribution_tests.rs  distributions_accuracy.rs  integration_tests.rs  matrix_tests.rs  mod.rs  non_central_distributions_tests.rs  numerical_stability.rs  outliers_robust_check.rs  property_tests.rs  reference.rs  reference_distributions.rs  reliability_tests.rs  time_series_prophet_check.rs  time_series_test.rs  unit_tests.rs  validation_tests.rs
AnaFis/src-tauri/tests/data/: descriptive_reference.csv  distribution_fitting_reference.csv  distribution_tests.json  edge_cases_reference.csv  hypothesis_tests.json  ks_reference.csv  mannwhitneyu_reference.csv  quantile_tests.json  shapiro_reference.csv
AnaFis/src-tauri/tools/: import_audit.py
(+367 files in other folders)
