[package]
name = "AnaFis"
version = "0.1.0"
description = "Advanced Numerical Analysis and Fitting Interface System"
authors = ["CokieMiner <pedromamartins@live.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/CokieMiner/Anafis-Tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anafis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
# ===== CORE FRAMEWORK =====
tauri = { version = "2.9.3", features = ["unstable"] }
tauri-plugin-dialog = "2.4.2"

# ===== PYTHON INTEGRATION =====
pyo3 = { version = "0.27.1", features = ["full", "auto-initialize"] }

# ===== SERIALIZATION =====
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# ===== ERROR HANDLING =====
thiserror = "2.0.17"
anyhow = "1.0.99"

# ===== LOGGING =====
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ===== UTILITIES =====
validator = { version = "0.20.0", features = ["derive"] }
blake3 = "1.5"
lru = "0.16.2"
once_cell = "1.19"
lazy_static = "1.4"
urlencoding = "2.1"
regex = "1.12.2"
base64 = "0.22.1"
dirs = "6.0"

# ===== ASYNC RUNTIME =====
tokio = { version = "1.0", features = ["sync", "time"] }

# ===== FILE I/O =====
csv = "1.3"
flate2 = "1.1.5"
encoding_rs = "0.8"

# ===== EXCEL EXPORT =====
rust_xlsxwriter = "0.92.2"

# ===== DATA PROCESSING =====
parquet = { version = "57.1.0", features = ["arrow"] }
arrow = { version = "57.1.0", features = ["prettyprint"] }
hex = "0.4"

# ===== DATABASE =====
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# ===== SCIENTIFIC COMPUTING =====
statrs = "0.18.0"
rustfft = "6.2"
rand = "0.9.2"
rand_pcg = "0.9.0"
rand_distr = "0.5.1"
integrate = "0.1.11"
argmin = { version = "0.11.0", features = ["serde1"] }
argmin-math = { version = "0.5.1", features = ["primitives"] }
rayon = "1.11.0"
splines = "5.0.0"
kiddo = "5.2.2"

# ===== ADVANCED STATISTICAL TESTS =====
smartcore = { version = "0.4.7" }
linfa = { version = "0.8.0", features = ["serde"] }
geo = "0.31.0"
extended-isolation-forest = "0.2.3"
ndarray = { version = "0.17.1", features = ["std", "rayon", "serde"] }
ndarray-linalg = { version = "0.18.0", features = ["openblas-static"] }
normality = "1.1.0"
oxidiviner = { version = "1.2.0", features = ["ndarray"] }
faer = { version = "0.23.2", features = ["std", "rayon"] }
meval = "0.2.0"
num-dual = "0.12.1"
exmex = "0.20.5"
r_mathlib = "0.2.0"

# ===== UNCERTAINTY QUANTIFICATION (2024/2025 Research Frontier) =====
conformal-prediction = "2.0.0"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7.0", features = ["html_reports"] }
