[package]
name = "AnaFis"
version = "0.1.0"
description = "Advanced Numerical Analysis and Fitting Interface System"
authors = ["CokieMiner <pedromamartins@live.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/CokieMiner/Anafis-Tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anafis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
# ===== CORE FRAMEWORK =====
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"

# ===== SERIALIZATION =====
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

# ===== ERROR HANDLING =====
thiserror = "2.0.18"
anyhow = "1.0.101"

# ===== LOGGING =====
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# ===== UTILITIES =====
once_cell = "1.21.3"
urlencoding = "2.1.3"
regex = "1.12.3"
base64 = "0.22.1"
dirs = "6.0.0"
dotenv = "0.15.0"

# ===== ASYNC RUNTIME =====
tokio = { version = "1.49.0", features = ["sync", "time"] }

# ===== FILE I/O =====
csv = "1.4.0"
flate2 = "1.1.9"
encoding_rs = "0.8.35"

# ===== DATA PROCESSING =====
parquet = { version = "57.3.0", features = ["arrow"] }
arrow = { version = "57.3.0", features = ["prettyprint"] }

# ===== DATABASE =====
rusqlite = { version = "0.38.0", features = ["bundled", "serde_json"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }

# ===== SCIENTIFIC COMPUTING =====
statrs = "0.18.0"
symb_anafis = { version = "0.8.1", features = ["parallel"] }
nalgebra = "0.34.1"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
