[package]
name = "AnaFis"
version = "0.1.0"
description = "Advanced Numerical Analysis and Fitting Interface System"
authors = ["CokieMiner <pedromamartins@live.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/CokieMiner/Anafis-Tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anafis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# ===== CORE FRAMEWORK =====
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"

# ===== SERIALIZATION =====
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

# ===== ERROR HANDLING =====
thiserror = "2.0.18"

# ===== LOGGING =====
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# ===== UTILITIES =====
urlencoding = "2.1.3"
regex = "1.12.3"
base64 = "0.22.1"
dirs = "6.0.0"
dotenv = "0.15.0"

# ===== ASYNC RUNTIME =====
tokio = { version = "1.52.1", features = ["sync", "time"] }

# ===== FILE I/O =====
csv = "1.4.0"
flate2 = "1.1.9"
encoding_rs = "0.8.35"

# ===== DATA PROCESSING =====
parquet = { version = "58.1.0", features = ["arrow"] }
arrow = { version = "58.1.0", features = ["prettyprint"] }

# ===== DATABASE =====
rusqlite = { version = "0.39.0", features = ["bundled", "serde_json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

# ===== SCIENTIFIC COMPUTING =====
statrs = "0.18.0"
symb_anafis = { version = "0.8.1", features = ["parallel"] }
nalgebra = "0.34.2"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.8.2", features = ["html_reports"] }

[lints.rust]
# SAFETY & DOCUMENTATION
unsafe_code = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
# Base: Ativa todos os avisos standard
all = { level = "deny", priority = -1 }

# =============================================================================
# QUALITY & STYLE (PEDANTIC)
# =============================================================================
pedantic = { level = "deny", priority = -1 }

# =============================================================================
# NURSERY (EXPERIMENTAL BUT VALUABLE)
# =============================================================================
nursery = { level = "deny", priority = -1 }

# =============================================================================
# CODE QUALITY & STYLE (RESTRICTION)
# =============================================================================
allow_attributes_without_reason = "deny" # Require explicit reasons for allow attributes
clone_on_ref_ptr = "deny"                # Avoid double indirection performance hit
create_dir = "deny"                      # Force error handling for filesystem ops
dbg_macro = "deny"                       # No debug artifacts in production (upgraded)
empty_drop = "deny"                      # Detect accidentally empty Drop implementations
empty_structs_with_brackets = "deny"     # Consistent struct syntax
exit = "deny"                            # No hard exits in library code
filetype_is_file = "deny"                # More robust file type checking
fn_to_numeric_cast = "deny"              # Prevent function pointer casting bugs
format_push_string = "deny"              # Performance: use write! instead of format!
get_unwrap = "deny"                      # Use [] indexing instead of get().unwrap()
if_then_some_else_none = "deny"          # Use bool::then_some for clarity
inline_asm_x86_att_syntax = "deny"       # Consistent ASM syntax if used
inline_asm_x86_intel_syntax = "deny"    # Consistent ASM syntax
integer_division = "deny"                # Force explicit float division
large_include_file = "deny"              # No embedding huge files
let_underscore_must_use = "deny"         # Don't ignore important return values
lossy_float_literal = "deny"             # Stricter float precision (upgraded)
map_err_ignore = "deny"                  # Don't lose error context
mem_forget = "deny"                      # No memory leaks
mixed_read_write_in_expression = "deny"  # Avoid subtle bugs
mutex_atomic = "deny"                    # Performance critical (upgraded)
non_ascii_literal = "deny"               # Keep code portable
panic_in_result_fn = "deny"              # No panics in Result-returning functions
partial_pub_fields = "deny"              # Consistent field visibility
print_stderr = "deny"                    # No side effects to stderr
print_stdout = "deny"                    # No side effects to stdout (upgraded)
pub_without_shorthand = "deny"           # Consistent pub syntax
rc_buffer = "deny"                       # Memory efficiency (upgraded)
rc_mutex = "deny"                        # Performance: prefer Arc<Mutex<T>>
redundant_type_annotations = "deny"      # Clean up unnecessary annotations
rest_pat_in_fully_bound_structs = "deny" # Explicit field handling
same_name_method = "deny"                # Avoid confusing method names
self_named_module_files = "deny"         # Consistent module naming
semicolon_inside_block = "deny"          # Consistent semicolon style
shadow_unrelated = "deny"                # Prevent confusing variable shadowing
single_char_lifetime_names = "deny"      # Descriptive lifetime names
unnecessary_self_imports = "deny"        # Clean imports
unneeded_field_pattern = "deny"          # Clean pattern matching
unseparated_literal_suffix = "deny"      # Readable numeric literals
use_debug = "deny"                       # No Debug in production formatting
verbose_file_reads = "deny"              # Use fs::read_to_string when appropriate

# =============================================================================
# PERFORMANCE (HPC FOCUSED)
# =============================================================================
large_stack_arrays = "deny"              # Prevent stack overflows (upgraded)
perf = { level = "deny", priority = -1 }
str_to_string = "deny"                   # Performance: avoid unnecessary allocations
string_add = "deny"                      # Performance: use format! or push_str
string_slice = "deny"                    # Performance: consider &str instead
suboptimal_flops = "deny"                # Mathematical precision is critical (upgraded)

# =============================================================================
# ROBUSTNESS & ERROR HANDLING
# =============================================================================
debug_assert_with_mut_call = "deny" # Side effects in debug asserts
missing_panics_doc = "deny"         # Document when functions can panic
panic = "deny"                      # No panics in library code
todo = "deny"                       # No unfinished code (upgraded)
try_err = "deny"                    # Use ? operator consistently
undocumented_unsafe_blocks = "deny" # All unsafe must be documented
unimplemented = "deny"              # No unfinished implementations
unreachable = "deny"                # All code paths must be explicitly handled
unwrap_used = "deny"                # No unwraps - use expect with context

# =============================================================================
# MATH PRECISION & CORRECTNESS
# =============================================================================
imprecise_flops = "deny"            # Mathematical precision critical (upgraded)
suspicious_xor_used_as_pow = "deny" # Catch common XOR/pow confusion
